Fix action button column break on mobile

--- a/src/includes/style.css
+++ b/src/includes/style.css
@@ -3,4 +3,8 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
+
+  .hidden-on-mobile {
+    display: none;
+  }
 }
